[gd_scene load_steps=6 format=3 uid="uid://d3kjty8dvxj44"]

[ext_resource type="Texture2D" uid="uid://s4k0y1cx5pmu" path="res://assets/DIESCREEN.png" id="1_3mp2v"]
[ext_resource type="Script" path="res://scenes/deathscreen.gd" id="3_kswap"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_0ucga"]

[sub_resource type="FontFile" id="FontFile_fbysl"]
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/26/0/ascent = 0.0
cache/0/26/0/descent = 0.0
cache/0/26/0/underline_position = 0.0
cache/0/26/0/underline_thickness = 0.0
cache/0/26/0/scale = 1.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_lgkci"]

[node name="Death" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Diescreen" type="Sprite2D" parent="."]
position = Vector2(576, 325)
texture = ExtResource("1_3mp2v")

[node name="Gombok" type="MarginContainer" parent="."]
layout_mode = 0
offset_left = 479.0
offset_top = 454.0
offset_right = 872.0
offset_bottom = 687.0
scale = Vector2(0.536924, 1.12998)

[node name="Gombok" type="VBoxContainer" parent="Gombok"]
layout_mode = 2

[node name="Start" type="Button" parent="Gombok/Gombok"]
layout_mode = 2
theme_override_constants/outline_size = 0
theme_override_font_sizes/font_size = 26
text = "Play Again"
script = ExtResource("3_kswap")

[node name="HSeparator" type="HSeparator" parent="Gombok/Gombok"]
layout_mode = 2
theme_override_constants/separation = 7
theme_override_styles/separator = SubResource("StyleBoxTexture_0ucga")

[node name="Options" type="Button" parent="Gombok/Gombok"]
layout_mode = 2
theme_override_fonts/font = SubResource("FontFile_fbysl")
theme_override_font_sizes/font_size = 26
text = "Options"
script = ExtResource("3_kswap")

[node name="HSeparator2" type="HSeparator" parent="Gombok/Gombok"]
layout_mode = 2
theme_override_constants/separation = 7
theme_override_styles/separator = SubResource("StyleBoxFlat_lgkci")

[node name="Quit" type="Button" parent="Gombok/Gombok"]
layout_mode = 2
theme_override_font_sizes/font_size = 26
text = "Menu"
script = ExtResource("3_kswap")

[connection signal="pressed" from="Gombok/Gombok/Start" to="Gombok/Gombok/Start" method="_on_pressed"]
[connection signal="pressed" from="Gombok/Gombok/Options" to="Gombok/Gombok/Start" method="_on_options_pressed"]
[connection signal="pressed" from="Gombok/Gombok/Quit" to="Gombok/Gombok/Start" method="_on_quit_pressed"]
